samples/test6.out

*** Error line 1.
null main()
^^^^
*** syntax error

